# label-hub

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: images.yml  release-node.yml
crates/control/: .env.example  Cargo.toml  Dockerfile  README.md
crates/control/migrations/: 0001_init.sql
crates/control/src/: auth.rs  config.rs  main.rs  state.rs  tailscale.rs  util.rs
crates/control/src/routes/: dash.rs  mod.rs  node_api.rs
crates/control/web/: app.js  index.html
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
deploy/: azbridge.md  cloudflared.md  control-azure.md  label-hub.service  provision-node.sh  setup-azbridge.sh  setup-standalone.sh  tailscale-acls.md  update.sh
images/: README.md  RELEASE_NOTES.md  build-image.sh  build-images.sh  labelhub.conf.example
images/firstboot/: labelhub-firstboot.service  labelhub-firstboot.sh
images/pi-gen/stage-labelhub/: 00-run.sh  prerun.sh
images/pocketterm35/: waveshare-35dpi-5b.dtbo
scripts/: print-pi-label.py  verify-control.sh
src/: agent.rs  config.rs  d365_client.rs  main.rs  mdns.rs  printer.rs  state.rs
src/routes/: d365.rs  inbound.rs  jobs.rs  mod.rs  preview.rs  printers.rs  receiving_labels.rs  settings.rs
web/: app.js  index.html  receiving-label.zpl  receiving-labels.html
web/labels/: receiving-item-label-4x2.zpl  test-receiving-item-label-4x2.zpl
