[package]
name = "label-hub"
version = "0.1.0"
edition = "2021"
description = "Self-hosted ZPL label print hub for D365 F&O / SCM external label service"
license = "MIT"

[workspace]
members = ["crates/proto", "crates/control"]
resolver = "2"

[dependencies]
label-proto = { path = "crates/proto" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "sync"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
mdns-sd = "0.20.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
