[package]
name = "label-control"
version = "0.1.0"
edition = "2021"
description = "Central control plane (C2) for the label-hub fleet"
license = "MIT"

[[bin]]
name = "label-control"
path = "src/main.rs"

[dependencies]
label-proto = { path = "../proto" }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "json"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
